Bug 15521 - smbd: fix close order of base_fsp and stream_fsp in smb_fname_fsp_destructor()
Summary: smbd: fix close order of base_fsp and stream_fsp in smb_fname_fsp_destructor()
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-16 10:14 UTC by Ralph Böhme
Modified: 2023-11-27 12:13 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.18 and 4.19 cherry-picked from master (2.34 KB, patch)
2023-11-20 08:32 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2023-11-16 10:14:45 UTC
VFS modules like streams_xattr use the function fsp_is_alternate_stream() on the fsp to determine in an fsp is a stream, eg in streams_xattr_close(). If fspo->base_fsp is arlready set to NULL, this won't work anymore.
Comment 1 Samba QA Contact 2023-11-16 18:32:04 UTC
This bug was referenced in samba master:

4481a67c1b20549a71d6c5132b637798a09f966d
Comment 2 Ralph Böhme 2023-11-20 08:32:39 UTC
Created attachment 18189 [details]
Patch for 4.18 and 4.19 cherry-picked from master
Comment 3 Jeremy Allison 2023-11-20 18:14:23 UTC
Re-assigning to Jule for 4.19.next, 4.18.next.
Comment 4 Jule Anger 2023-11-21 07:58:13 UTC
Pushed to autobuild-v4-{19,18}-test.
Comment 5 Samba QA Contact 2023-11-21 10:25:06 UTC
This bug was referenced in samba v4-18-test:

d522d15c82bc413fcc83106c93fd3f051a04f270
Comment 6 Samba QA Contact 2023-11-21 11:16:12 UTC
This bug was referenced in samba v4-19-test:

95af9424ccca96054a4350d0fa2f5d9200c93c27
Comment 7 Jule Anger 2023-11-21 11:29:12 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-11-27 12:13:09 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.3):

95af9424ccca96054a4350d0fa2f5d9200c93c27